// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvTag should render 1`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--red"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 2`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--magenta"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 3`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--purple"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 4`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--blue"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 5`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--cyan"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 6`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--teal"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 7`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--green"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 8`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--gray"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 9`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--cool-gray"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 10`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--warm-gray"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTag should render 11`] = `
<span role="listitem" class="cv-tag bx--tag bx--tag--high-contrast"><span class="bx--tag__label">test</span>
<!----></span>
`;

exports[`CvTagSkeleton Renders as expected 1`] = `<div class="cv-tag bx--tag bx--skeleton"></div>`;
